# redbook_mcp

./: .gitignore  LICENSE  README.md  config.yaml
python/: README.md  app_server.py  browser.py  config.py  config.yaml  configs.py  constants.py  cookies.json  cookies.py  feed_detail_result.json  login.py  main.py  mcp_server.py  pyproject.toml  result.bak.json  result.json  routes.py  schemas.py  service.py  utils.py
python/agent/: __init__.py  creative_agent.py
python/model/: img_processor.py  test_qwen_gen_img.py  test_wanx_gen_img.py  test_wanx_gen_video.py  text_processor.py  video_processor.py
python/xiaohongshu/: __init__.py  comment_feed.py  feed_detail.py  feeds.py  like_favorite.py  login.py  publish.py  publish_video.py  search.py  types.py  user_profile.py
web/: app.js  index.html  style.css
